<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.CoffeeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvAsk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothicbold"
                android:includeFontPadding="false"
                android:padding="4dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/a_s_k_coffee"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivCoffeeMore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCoffeeMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/coffee_menu"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCoffeeBeans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/coffee_beans"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/clTopHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCoffeeTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/coffee_special"
            android:layout_marginVertical="14dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/clTopHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvPureCoffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pure_natural_coffee"
            app:layout_constraintTop_toBottomOf="@id/ivCoffeeBeans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="20dp"
            android:lineSpacingExtra="8sp"
            android:translationY="-3.85sp"
            android:gravity="top"
            android:textSize="14sp"
            android:textColor="@color/coffee_color"
            android:fontFamily="@font/centurygothicbold"
            android:includeFontPadding="false"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCoffeeTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/centurygothic"
            android:gravity="top"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8sp"
            android:text="@string/pure_coffee_tag"
            android:textColor="@color/coffee_color"
            android:textSize="12sp"
            android:translationY="-3.85sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtvPureCoffee" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottomFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/mtvCoffeeTag"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvBuyNow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothicbold"
                android:includeFontPadding="false"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:text="@string/buy_now"
                android:elevation="6dp"
                android:shadowRadius="100"
                android:background="@drawable/curve_border"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvLearnMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothicbold"
                android:includeFontPadding="false"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:text="@string/learn_more"
                android:elevation="6dp"
                android:shadowRadius="100"
                android:background="@drawable/curve_border"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>