<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CoffeeDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBackArrowCD"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:padding="6dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mtvSearchProduct"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSearchProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/centurygothic"
            android:padding="6dp"
            android:text="@string/search_product"
            android:textColor="@color/coffee_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBackArrowCD"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPCoffeeImg"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/coffee_img_one"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/clPToolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="1dp"
        app:cardElevation="6dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/mcvOrganic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPCoffeeImg"
        app:strokeColor="@color/coffee_grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPCoffeeNatural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coffee_natural_food"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvPCoffeeNatural"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothic"
                android:includeFontPadding="false"
                android:text="@string/natural"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPCoffeeNatural" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvOrganic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="1dp"
        app:cardElevation="6dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/mcvSafe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mcvNatural"
        app:layout_constraintTop_toBottomOf="@id/ivPCoffeeImg"
        app:strokeColor="@color/coffee_grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPCoffeeOrganic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coffee_vegetarian_mark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvPCoffeeOrganic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothic"
                android:includeFontPadding="false"
                android:text="@string/organic"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPCoffeeOrganic"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvSafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="1dp"
        app:cardElevation="6dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mcvOrganic"
        app:layout_constraintTop_toBottomOf="@id/ivPCoffeeImg"
        app:strokeColor="@color/coffee_grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPCoffeeSafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coffee_sustainability"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvPCoffeeSafe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothic"
                android:includeFontPadding="false"
                android:text="@string/safe"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPCoffeeSafe" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="6dp"
        app:contentPadding="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/mcvNatural"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvPCoffeeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/centurygothic"
                android:includeFontPadding="false"
                android:padding="4dp"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPCoffeeRating"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mtvPCoffeeName"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/coffee_rating" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvPCoffeePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/centurygothicbold"
                android:includeFontPadding="false"
                android:padding="4dp"
                android:textColor="@color/coffee_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvPCoffeeName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvAddQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/centurygothicbold"
                android:includeFontPadding="false"
                android:padding="6dp"
                android:text="@string/add"
                android:textSize="16sp"
                android:textStyle="bold"
                android:elevation="6dp"
                android:shadowRadius="100"
                android:background="@drawable/curve_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivPCoffeeCart"
                app:layout_constraintTop_toTopOf="@id/mcvCoffeeQty" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvCoffeeQty"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                android:visibility="gone"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toStartOf="@+id/ivPCoffeeCart"
                app:layout_constraintTop_toBottomOf="@id/ivPCoffeeRating"
                app:strokeColor="@color/coffee_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtvSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/centurygothicbold"
                        android:includeFontPadding="false"
                        android:textStyle="bold"
                        android:padding="3dp"
                        android:text="@string/decrement"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/mtvCount"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtvCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/centurygothicbold"
                        android:includeFontPadding="false"
                        android:textStyle="bold"
                        android:padding="3dp"
                        android:text="@string/qty"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/mtvAdd"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/mtvSub"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtvAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/centurygothicbold"
                        android:includeFontPadding="false"
                        android:textStyle="bold"
                        android:padding="3dp"
                        android:text="@string/increment"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/mtvCount"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPCoffeeCart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/mcvCoffeeQty"
                app:srcCompat="@drawable/coffee_buying"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>